<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
    <string name="app_name">DsTodoList</string>
    <string name="add_a_to_do">Add a to-do…</string>
    <string name="add_a_task">Add a task</string>
    <string name="create_a_list">Create a list</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="sort">Sort</string>
    <string name="send">Send</string>
    <string name="print">Print</string>
    <string name="edit_list">Edit list</string>
    <string name="duplicate_list">Duplicate list</string>
    <string name="about">About</string>
    <string name="message_wait_a_moment">Aguarde um momento…</string>
</resources>
