<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mn_search"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mn_sort"
        android:title="@string/sort"
        app:showAsAction="always"/>
    <item
        android:id="@+id/mn_send"
        android:title="@string/send"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mn_print"
        android:title="@string/print"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mn_edit_list"
        android:title="@string/edit_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mn_duplicate_list"
        android:title="@string/duplicate_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mn_about"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/mn_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
</menu>